# burnr8

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .semgrep.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT.md  README.md  SECURITY.md  pyproject.toml  setup_oauth.py
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: ads-auditor.md  ads-optimizer.md
.claude/commands/: adcopy.md  budget.md  release.md  status.md  trends.md  waste.md
.claude/hooks/: block-dangerous.sh  lint-after-edit.sh  protect-credentials.sh  regen-lockfiles.sh  verify-tests.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  publish.yml  security.yml
agents/: ads-auditor.md  ads-optimizer.md
commands/: audit.md  competitors.md  launch.md  setup.md  spend.md
hooks/: credential-check.sh
plugins/burnr8-cloud/: .mcp.json
plugins/burnr8-cloud/.claude-plugin/: plugin.json
scripts/: ci-local.sh  release.sh
skills/google-ads-audit/: SKILL.md
skills/google-ads-competitors/: SKILL.md
skills/google-ads-launch/: SKILL.md
skills/google-ads-optimize/: SKILL.md
src/burnr8/: __init__.py  __main__.py  client.py  dashboard.py  errors.py  helpers.py  logging.py  reports.py  server.py  session.py  setup.py
src/burnr8/tools/: __init__.py  accounts.py  ad_groups.py  adjustments.py  ads.py  budgets.py  campaigns.py  competitive.py  compound.py  conversions.py  extensions.py  goals.py  keywords.py  negative_keywords.py  reporting.py
tests/: conftest.py  test_accounts.py  test_ad_groups.py  test_ads.py  test_ads_tools.py  test_budgets.py  test_campaigns.py  test_campaigns_tools.py  test_client.py  test_competitive.py  test_compound.py  test_conversions_tools.py  test_dashboard.py  test_errors.py  test_extensions.py  test_fuzzing.py  test_goals_tools.py  test_helpers.py  test_keywords_tools.py  test_logging.py  test_negative_keywords.py  test_reporting_tools.py  test_reports.py  test_server.py  test_session.py  test_setup.py
tests/integration/: conftest.py  test_accounts.py  test_ad_groups.py  test_ads.py  test_budgets.py  test_campaigns.py  test_destructive_safety_workflow.py  test_negative_keywords.py  test_new_campaign_safety_workflow.py  test_reporting.py  test_update_campaign_safety_workflow.py  test_validate_only_workflow.py
