[project]
name = "burnr8"
version = "0.7.0"
description = "Google Ads MCP server — manage your ad spend from Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Harrison Hesslink" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Office/Business",
    "Typing :: Typed",
    "Environment :: Console",
    "Intended Audience :: Developers",
]
dependencies = [
    "fastmcp>=3.0.0,<4.0.0",
    "google-ads>=25.1.0,<31.0.0",
    "python-dotenv>=1.0.0",
    "google-auth-oauthlib>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=5.0.0", "ruff>=0.4.0", "mypy>=1.10.0", "pip-audit>=2.7.0", "types-requests>=2.31.0", "pip-tools>=7.5.0,<8.0.0", "pre-commit>=3.0.0", "semgrep>=1.0.0", "hypothesis>=6.0.0"]

[project.urls]
Repository = "https://github.com/HarrisonHesslink/burnr8"
"Bug Tracker" = "https://github.com/HarrisonHesslink/burnr8/issues"
Changelog = "https://github.com/HarrisonHesslink/burnr8/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
burnr8 = "burnr8.dashboard:main"
burnr8-setup = "burnr8.setup:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
burnr8 = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "S"]
ignore = [
    "E501",  # line length handled by formatter
    "SIM108",  # ternary operator — walrus pattern is fine
    "S101",  # assert statements are used in tests
    "S105",  # hardcoded passwords — false positives on test fixtures
    "S108",  # insecure temp dir — false positives on test mock paths
    "S608",  # GAQL does not support native parameterized queries, so we rely on strict type/ID validators instead.
]

[tool.ruff.lint.isort]
known-first-party = ["burnr8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
strict_markers = true
addopts = "--tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = false
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "google.ads.*",
    "google.auth.*",
    "google.oauth2.*",
    "grpc.*"
]
ignore_missing_imports = true
